# Active-Conformal-Control-Navigating-Density-Chasms-in-Quantized-Vision-Language-Systems

./: .gitattributes  .gitignore  ACC_ARCHITECTURE_OVERVIEW.md  Bib.docx  Bib_full_text.txt  LICENSE  README.md  generate_teacher_manifolds.py  hardware_monitor.py  paper_text.txt  requirements.txt  requirements_bench.txt  requirements_core.txt
BASELINES/conformal-bayes-quad/: .gitignore  LICENSE  README.md  fetch_data.sh  justfile  pyproject.toml
BASELINES/conformal-bayes-quad/scripts/: coco_analyze.py  heteroskedastic.py  heteroskedastic_analyze.py  multilabel_classification.py  synth.py  synth_analyze.py
BASELINES/conformal-bayes-quad/src/bcp/: data_set.py  losses.py  thresholds.py  utils.py
BASELINES/conformal-bayes-quad/tests/: test_data_set.py  test_losses.py  test_thresholds.py  test_utils.py
BASELINES/ppdre/: .gitignore  LICENSE  README.md  pyproject.toml
BASELINES/ppdre/src/ppdre/: _basis_functions.py  _utils.py  model.py
RESULTS/phase_1/: acc_results_llava-v1.6-7b_alfworld.jsonl  acc_results_llava-v1.6-7b_mathvista.jsonl  acc_results_llava-v1.6-7b_pope.jsonl  acc_results_llava-v1.6-7b_vqav2.jsonl  acc_results_phi-4-multimodal_alfworld.jsonl  acc_results_phi-4-multimodal_mathvista.jsonl  acc_results_phi-4-multimodal_pope.jsonl  acc_results_phi-4-multimodal_vqav2.jsonl  acc_results_qwen2.5-vl-3b_alfworld.jsonl  (+3 more)
SWEET_SPOT_ANALYSIS/: README.md  manifold_results.json  manifold_sweep.py  manifold_sweep_vlm.py  phi4_sweet_spot_rerun.py  raw_capture_llava.json  raw_capture_phi4.json  raw_capture_qwen.json  vlm_manifold_results.json  vlm_results_visualizer.py
(+126 files in other folders)
