[project]
name = "conformal-as-bayes-quad"
version = "0.1.0"
description = "Code for Conformal Prediction as Bayesian Quadrature by Jake Snell & Tom Griffiths (spotlight at ICML 2025)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "jax>=0.6.1",
    "jaxopt>=0.8.5",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages =["src/bcp"]
