[project]
name = "ppdre"
version = "0.1.0"
description = "Projection Pursuit Framework for Density Ratio Estimation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.6.2",
    "numpy>=2.3.1",
    "optax>=0.2.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff.lint]
select = [
    "B",
    "C",
    "D",
    "E",
    "F",
    "RUF",
    "W",
    "I",
    "YTT"
]
ignore = [
    "D203",
    "D212",
    "D413",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
